add gender in product query
