# src/routes/productsRoutes.ts
@@ -1,17 +1,22 @@
 import * as express from "express";
 import { ProductService } from '../service/ProductService';
+import { Product } from "../entity/Product";
 
 const router = express.Router();
 const productService = new ProductService();
 
-// Get customers by phone
+// Get product list
 router.get('/', async (req, res) => {
   try {
     const products = await productService.list();
     if (!products) {
       res.status(404).json({ message: 'products not found' });
     } else {
-      res.json(products ? products : []);
+      if (req.query.gender) {
+        res.json(products.filter((product: Product) => product.gender === req.query.gender));
+      } else {
+        res.json(products ? products : []);
+      }
     }
   } catch (error) {
     console.error(error);
@@ -22,7 +27,11 @@ router.get('/', async (req, res) => {
 // Get product by ID
 router.get('/', async (req, res) => {
   try {
-    const productId = parseInt(req.query.id);
+    const idParam = req.query.id;
+    if (typeof idParam !== 'string') {
+      return res.status(400).json({ message: 'Invalid ID' });
+    }
+    const productId = parseInt(idParam);
     const product = await productService.getProductByID(productId);
     if (product) {
       res.json(product);
